Edit project modules